# maze_solver_rust

./: Cargo.toml  README.md
examples/: huge.maze  large.maze  medium.maze  small.maze  tiny.maze
src/: generate.rs  main.rs  maze.rs
src/generator/: breadth_first_search.rs  depth_first_search.rs  kruskal.rs  mod.rs
src/solver/: a_star.rs  depth_first_search.rs  mod.rs
