[package]
name = "maze_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"
clap = { version = "4.0.32", features = ["derive"] }
spin_sleep = "1.1.1"
itertools = "0.10.5"
disjoint-sets = "0.4.2"
anyhow = "1.0.68"
thiserror = "1.0.38"
binary-heap-plus = "0.5.0"